# TrebleSynth

./: README.md
CircuitSim/: Filter.sch  Filter2.sch  Filter3.dat.ngspice  Filter3.sch  Phaser.sch  lpffbk.m  lpfl.m  makewaves.m
Code/treblesynth/: CMakeLists.txt
Code/treblesynth/treblesynth/: CMakeLists.txt
Code/treblesynth/treblesynth/src/: buttons.c  buttons.h  dsp.c  dsp.h  main.cpp  main.h  patches.c  patches.h  pitch.c  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.h  synth.c  synth.h  tinycl.h  treblesynth.h  ui.c  ui.h  usb_descriptors.c  usbmain.c  usbmain.h  waves.c  waves.h
TrebleSynth/: TrebleSynth.kicad_pcb  TrebleSynth.kicad_prl  TrebleSynth.kicad_pro  TrebleSynth.kicad_sch  TrebleSynthControls.kicad_sch  din-5_180degree-with-shld.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table
TrebleSynth/TrebleSynth.pretty/: DIN5Circular.kicad_mod
TrebleSynth/gerber/: TrebleSynth-B_Cu.gbr  TrebleSynth-B_Mask.gbr  TrebleSynth-B_Paste.gbr  TrebleSynth-B_Silkscreen.gbr  TrebleSynth-Edge_Cuts.gbr  TrebleSynth-F_Cu.gbr  TrebleSynth-F_Mask.gbr  TrebleSynth-F_Paste.gbr  TrebleSynth-F_Silkscreen.gbr  TrebleSynth-NPTH.drl  TrebleSynth-PTH.drl  TrebleSynth-job.gbrjob
